add caddy: add Caddyfile + docker-compose; add minimal static UI (octopus)

--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Simple SNOMED Browser (demo)</title>
+  <title>Open Clinical Terminology Browser (demo)</title>
   <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
   <header class="topbar">
-    <div class="brand">Simple SNOMED Browser</div>
+    <div class="brand">Open Clinical Terminology Browser</div>
     <div class="top-actions">
       <input id="globalSearch" placeholder="Search concepts or enter ID" />
       <button id="searchBtn">Search</button>
