--- a/static/octopus.html
+++ b/static/octopus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SHRiMP-like Terminology Viewer</title>
+  <title>Octopus Terminology Viewer</title>
   <link rel="stylesheet" href="/static/styles.css">
   <style>
     .form-row{display:flex;gap:.5rem;align-items:center;margin-bottom:.5rem}
@@ -14,7 +14,13 @@
 </head>
 <body>
   <header class="topbar">
-    <div class="brand">SHRiMP-like Viewer (client-only)</div>
+    <div style="display:flex;flex-direction:column;gap:4px">
+      <div style="display:flex;align-items:center;gap:8px">
+        <div class="brand">Octopus</div>
+        <small id="octopusVersion" class="muted">v0.1 — Octopus viewer</small>
+      </div>
+      <div id="queryInfo" class="muted" style="font-size:0.95rem"></div>
+    </div>
     <div class="top-actions">
       <a href="/static/index.html" class="btn">Back</a>
     </div>
