new changes for sstatic files and .gitignore

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
       <input id="globalSearch" placeholder="Search concepts or enter ID" />
       <button id="searchBtn">Search</button>
       <a class="btn" href="/static/octopus.html">OCTOPUS UI</a>
+      <a class="btn" href="/static/octopus-preact.html">Octopus (Preact)</a>
     </div>
   </header>
 
