--- a/static/octopus.html
+++ b/static/octopus.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐙<animate attributeName=%22y%22 values=%22.9em;.7em;.9em%22 dur=%221s%22 repeatCount=%22indefinite%22/></text></svg>">
-  <title>🐙 Universal Octopus Viewer - Open Clinical Terminology Browser</title>
+  <title>Universal Octopus Viewer - Open Clinical Terminology Browser</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     .form-row{display:flex;gap:.5rem;align-items:center;margin-bottom:.5rem}
@@ -18,6 +18,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="octopus.js"></script>
+  <script type="module" src="octopus.js?v=1733206000"></script>
 </body>
 </html>
