--- a/static/octopus.html
+++ b/static/octopus.html
@@ -14,10 +14,14 @@
     .panel{background:rgba(255,255,255,0.02);padding:1rem;border-radius:8px}
     button:disabled{opacity:0.5;cursor:not-allowed}
     .error-box{background:rgba(255,0,0,0.1);border:1px solid rgba(255,0,0,0.3);padding:0.75rem;border-radius:6px;color:#ff6b6b}
+    .layout-container{display:flex;min-height:calc(100vh - 60px)}
+    .left-pane{width:280px;background:rgba(255,255,255,0.02);border-right:1px solid rgba(255,255,255,0.1);padding:1rem;overflow-y:auto}
+    .main-content{flex:1;overflow-y:auto}
+    @media (max-width: 768px){.layout-container{flex-direction:column}.left-pane{width:100%;border-right:none;border-bottom:1px solid rgba(255,255,255,0.1)}}
   </style>
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="octopus.js?v=1733206100"></script>
+  <script type="module" src="octopus.js?v=1733655000"></script>
 </body>
 </html>
