fixed suggestions from coderabbit

--- a/static/demo.html
+++ b/static/demo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>OctoViewer - Demo Examples</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/static/styles.css">
   <style>
     body { font-family: system-ui, -apple-system, sans-serif; padding: 2rem; background: #f5f7fa; max-width: 1200px; margin: 0 auto; }
     h1 { color: #0b1220; margin-bottom: 0.5rem; }
