--- a/static/tree-preact.html
+++ b/static/tree-preact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐙<animate attributeName=%22y%22 values=%22.9em;.7em;.9em%22 dur=%221s%22 repeatCount=%22indefinite%22/></text></svg>">
   <title>🐙Universal OctoViewer — Clinical Terminology Tree View</title>
-  <link rel="stylesheet" href="/static/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; padding: 0; background: #f5f7fa; margin: 0; min-height: 100vh; display: flex; flex-direction: column; }
     h1 { margin: 0 0 0.5rem 0; font-size: 1.25rem; }
@@ -32,6 +32,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/static/tree-preact.js?v=9"></script>
+  <script type="module" src="tree-preact.js?v=9"></script>
 </body>
 </html>
